Issue 259: Fix form label white space

--- a/themes/KnihovnyCz/less/custom.less
+++ b/themes/KnihovnyCz/less/custom.less
@@ -48,6 +48,12 @@ a {
   text-decoration: none;
 }
 
+form {
+  label {
+    white-space: nowrap;
+  }
+}
+
 .nav > li > a:hover,
 .nav > li > a:focus {
   outline: none;
